<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#7986CB"
    tools:context="com.voting.internship.voting_app.MainActivity">


        <EditText
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:textColorHint="#ffffff"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:textColor="#ffffff"
            android:hint="@string/enter_login_id"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:hint="@string/enter_aadhar_no"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/tv1"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="96dp"
            android:layout_alignBaseline="@+id/b2"
            android:layout_alignBottom="@+id/b2"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="34dp"
            android:layout_marginStart="27dp"
            android:layout_below="@+id/tv2"
            android:layout_toEndOf="@+id/b1" />
</RelativeLayout>